# comp820-assignment2-genai-sr

./: EXAMPLE.md  README.md  analysis.py  main.py  pyproject.toml
super_resolution/: README.md  main.py  pyproject.toml
validations/learned-perceptual-image-patch-similarity/: README.md  main.py  pyproject.toml
validations/learned-perceptual-image-patch-similarity/.output/: 0801__4x.json  0801x2__2x.json  0802__4x.json  0802x2__2x.json  0803__4x.json  0803x2__2x.json  0804__4x.json  0804x2__2x.json  0805__4x.json  0805x2__2x.json  0806__4x.json  0806x2__2x.json  0807__4x.json  0807x2__2x.json  0808__4x.json  0808x2__2x.json  0809__4x.json  0809x2__2x.json  0810__4x.json  0810x2__2x.json  0811__4x.json  0811x2__2x.json  0812__4x.json  0812x2__2x.json  0813__4x.json  0813x2__2x.json  0814__4x.json  0814x2__2x.json  0815__4x.json  0815x2__2x.json  0816__4x.json  0816x2__2x.json  0817__4x.json  0817x2__2x.json  0818__4x.json  0818x2__2x.json  0819__4x.json  0819x2__2x.json  0820__4x.json  0820x2__2x.json  (+210 more)
validations/multi-scale-structural-similarity-index/: README.md  main.py  pyproject.toml
validations/multi-scale-structural-similarity-index/.output/: 0801__4x.json  0801x2__2x.json  0802__4x.json  0802x2__2x.json  0803__4x.json  0803x2__2x.json  0804__4x.json  0804x2__2x.json  0805__4x.json  0805x2__2x.json  0806__4x.json  0806x2__2x.json  0807__4x.json  0807x2__2x.json  0808__4x.json  0808x2__2x.json  0809__4x.json  0809x2__2x.json  0810__4x.json  0810x2__2x.json  0811__4x.json  0811x2__2x.json  0812__4x.json  0812x2__2x.json  0813__4x.json  0813x2__2x.json  0814__4x.json  0814x2__2x.json  0815__4x.json  0815x2__2x.json  0816__4x.json  0816x2__2x.json  0817__4x.json  0817x2__2x.json  0818__4x.json  0818x2__2x.json  0819__4x.json  0819x2__2x.json  0820__4x.json  0820x2__2x.json  (+210 more)
validations/peak-signal-to-noise-ratio/: README.md  main.py  pyproject.toml
validations/peak-signal-to-noise-ratio/.output/: 0801__4x.json  0801x2__2x.json  0802__4x.json  0802x2__2x.json  0803__4x.json  0803x2__2x.json  0804__4x.json  0804x2__2x.json  0805__4x.json  0805x2__2x.json  0806__4x.json  0806x2__2x.json  0807__4x.json  0807x2__2x.json  0808__4x.json  0808x2__2x.json  0809__4x.json  0809x2__2x.json  0810__4x.json  0810x2__2x.json  0811__4x.json  0811x2__2x.json  0812__4x.json  0812x2__2x.json  0813__4x.json  0813x2__2x.json  0814__4x.json  0814x2__2x.json  0815__4x.json  0815x2__2x.json  0816__4x.json  0816x2__2x.json  0817__4x.json  0817x2__2x.json  0818__4x.json  0818x2__2x.json  (+215 more)
validations/scale-invariant-feature-transform/: README.md  main.py  pyproject.toml
(+261 files in other folders)
